<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nourriture</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Title">Nourriture</string>
    <string name="UsernameTitle">Username</string>
    <string name="PasswordTitle">Password</string>
    <string name="LoginButton">Log in</string>
    <string name="CreateAccountButton">Create an account</string>
    <string name="ForgotYourPasswordButton">Forgot Your Password?</string>
    <string name="title_activity_create_account">Create an account</string>
    <string name="RegisterButton">Register</string>
    <string name="FirstNameEditText">First Name</string>
    <string name="LastNameEditText">Last Name</string>
    <string name="EmailEditText">Email</string>
    <string name="UsernameEditText">Username</string>
    <string name="PasswordEditText">Password</string>
    <string name="RetypePasswordEditText">Password</string>
    <string name="PasswordTextView">Password</string>
    <string name="RetypePasswordTextView">Retype Password</string>
    <string name="title_activity_forgot_password">Reset Your Password</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="EnterYourEmail">Please Enter Your Email :</string>
    <string name="EmailEditTextFP">Email</string>
    <string name="PleaseEnterYourUsername">Please Enter Your Username</string>
    <string name="PleaseEnterYourPassword">Password</string>
    <string name="FirstNameTextView">First Name</string>
    <string name="LastNameTextView">Last Name</string>
    <string name="EmailTextView">Email</string>
    <string name="UsernameTextView">Username</string>
    <string name="SendEmailButton">Send</string>
    <string name="title_activity_log_in">Welcome to Nourriture</string>
    <string name="CountryTitle">Country</string>
    <string name="IngredientsTitle">Ingredients</string>
    <string name="AddButton">Add</string>
    <string name="CreateReceipeButton">Create Receipe</string>
    <string name="ListReceipe">List Current Ingredients</string>

    <string-array name="country_array">
        <item>France</item>
        <item>China</item>
    </string-array>
    <string-array name="ingredients_array">
        <item>Tomato</item>
        <item>Salad</item>
        <item>Corn</item>
        <item>Potato</item>
        <item>Spinach</item>
        <item>Bean</item>
        <item>Onion</item>
        <item>Tuna</item>
        <item>Shrimp</item>
        <item>Noddles</item>
        <item>Rice</item>
        <item>Soy</item>
        <item>lamb</item>
        <item>cod</item>
        <item>breaded fish</item>
        <item>salmon</item>
        <item>hake</item>
        <item>banana</item>
        <item>apple</item>
        <item>grapes</item>
        <item>strawberry</item>
        <item>raspberry</item>
    </string-array>

    <string name="title_activity_ingredient_list">Ingredients list</string>

</resources>
