<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/Nourriture">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Title"
        android:id="@+id/TitleNourrituretextView"
        android:layout_marginTop="34dp"
        android:textSize="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UsernameEditText"
        android:layout_below="@+id/TitleNourrituretextView"
        android:layout_marginTop="97dp"
        android:layout_alignRight="@+id/TitleNourrituretextView"
        android:layout_alignEnd="@+id/TitleNourrituretextView"
        android:layout_alignLeft="@+id/TitleNourrituretextView"
        android:layout_alignStart="@+id/TitleNourrituretextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordEditText"
        android:layout_below="@+id/PasswordLabel"
        android:layout_alignLeft="@+id/UsernameEditText"
        android:layout_alignStart="@+id/UsernameEditText"
        android:layout_alignRight="@+id/UsernameEditText"
        android:layout_alignEnd="@+id/UsernameEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/UsernameTitle"
        android:id="@+id/UsernameLabel"
        android:layout_alignBottom="@+id/UsernameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PasswordTitle"
        android:id="@+id/PasswordLabel"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/UsernameLabel"
        android:layout_alignStart="@+id/UsernameLabel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginButton"
        android:id="@+id/LoginButton"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/PasswordEditText"
        android:layout_alignLeft="@+id/PasswordEditText"
        android:layout_alignStart="@+id/PasswordEditText"
        android:layout_alignRight="@+id/PasswordEditText"
        android:layout_alignEnd="@+id/PasswordEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateAccountButton"
        android:id="@+id/CreateAccountButton"
        android:layout_below="@+id/LoginButton"
        android:layout_alignLeft="@+id/LoginButton"
        android:layout_alignStart="@+id/LoginButton"
        android:layout_alignRight="@+id/LoginButton"
        android:layout_alignEnd="@+id/LoginButton"
        android:onClick="CreateAnAccount" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgotYourPasswordButton"
        android:id="@+id/FYPButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="ForgotYourPasswordAction"/>

</RelativeLayout>
