<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nourriture.teambjtu.com.nourriture.LogInActivity"
    android:id="@+id/Nourriture">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/CountryTitle"
        android:id="@+id/ContryTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:textSize="45dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CountrySpinner"
        android:layout_below="@+id/ContryTitle"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@+id/IngredientsTitle"
        android:layout_alignStart="@+id/IngredientsTitle"
        android:layout_alignRight="@+id/ContryTitle"
        android:layout_alignEnd="@+id/ContryTitle"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/IngredientsTitle"
        android:id="@+id/IngredientsTitle"
        android:layout_marginTop="54dp"
        android:textSize="45dp"
        android:layout_below="@+id/CountrySpinner"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IngredientsSpinner"
        android:layout_below="@+id/IngredientsTitle"
        android:layout_marginTop="41dp"
        android:layout_alignLeft="@+id/IngredientsTitle"
        android:layout_alignStart="@+id/IngredientsTitle"
        android:layout_alignRight="@+id/ContryTitle"
        android:layout_alignEnd="@+id/ContryTitle"
        android:spinnerMode="dialog" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateReceipeButton"
        android:id="@+id/button2"
        android:layout_below="@+id/IngredientsSpinner"
        android:layout_alignLeft="@+id/IngredientsSpinner"
        android:layout_alignStart="@+id/IngredientsSpinner"
        android:layout_marginTop="56dp"
        android:layout_alignRight="@+id/IngredientsTitle"
        android:layout_alignEnd="@+id/IngredientsTitle" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddButton"
        android:id="@+id/AddIngredientsButton"
        android:layout_alignTop="@+id/IngredientsSpinner"
        android:layout_toRightOf="@+id/ContryTitle"
        android:layout_toEndOf="@+id/ContryTitle"
        android:onClick="AddIngredients"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ListReceipe"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:onClick="IngredientList"/>

</RelativeLayout>
